--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "leva": "^0.9.34",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-simple-typewriter": "^5.0.1",
     "three": "^0.146.0"
   },
   "devDependencies": {
