--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@formspree/react": "^2.4.2",
     "@react-three/drei": "^9.68.6",
     "@react-three/fiber": "^8.13.0",
+    "emailjs-com": "^3.2.0",
     "framer-motion": "^10.12.16",
     "framer-motion-3d": "^10.12.16",
     "gsap": "^3.12.0",
